client/src/components/UserPages/Message/Message.css
.messageHistory {
  margin-left: -35px;
}
.messageUsername {
  margin-left: 20px;
  margin-top: 10px;
}
.messageBox, .userMessagerContainer {
  border-bottom: 1px solid black;
}

.messageScreen {
  width: 100%;
  border-left: 1px solid black;
}

.messageInputGroup {
  width: 95%;
  align-items: center;
  margin-left: 20px;
}

.messageInputControl {
  height: 60%;
  background-color: #DCDCDC;
}

.userMessagerContainer {
  height: 7%;
}

.messageHistoryContainer {
  height: 73%;
}

.messageInputContainer {
  height: 20%;
  border-top: 1px solid black;
}

.sendMessageButton {
  margin-left: 15px;
  height: 30%;
  width: 10%;
}

